--- a/HMI1/Themes/Base-Dark/Base-DarkStyle.css
+++ b/HMI1/Themes/Base-Dark/Base-DarkStyle.css
@@ -1,6 +1,4 @@
 /**
-* Styles for theme: Base-Dark
-*
 * About font inclusion in TcHmi
 * 
 * As a default we include Roboto Condensed (in Fonts folder) as a webfont which will render latin, greek, vietnamese, cyrillic glyphs.
@@ -33,9 +31,11 @@ html {
 .tchmi-body-runtime {
 }
 
+/*  Views */
 div[data-tchmi-type="TcHmi.Controls.System.TcHmiView"] {
-    background-color: #37424d;
-    background-image: radial-gradient(ellipse, #37424d 50%, #252f38 100%);
+    background-image: url(Images/Background.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 /**
@@ -45,8 +45,9 @@ div[data-tchmi-type="TcHmi.Controls.System.TcHmiView"] {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #37424d;
-    background-image: radial-gradient(ellipse, #37424d 50%, #252f38 100%);
+    background-image: url(Images/Background.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     overflow: auto;
     display: flex;
 }
@@ -350,21 +351,3 @@ div[data-tchmi-type="TcHmi.Controls.System.TcHmiView"] {
         .tchmi-view-loading-spinner div:nth-child(3) {
             animation-delay: -0.15s;
         }
-
-/*TcHmiNavBarMenu*/
-#TcHmiNavBarMenu .tchmi-nav-bar-mobile-container-menu-burger {
-    width: 40px;
-    height: 40px;
-}
-
-.tchmi-textblock-template {
-    color: #111111;
-}
-
-.tchmi-textblock {
-    color: #111111;
-}
-
-#TcHmiNavBarMenu {
-    box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 2px -1px;
-}
